📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9926,5 +9926,21 @@
         "published": "Fri, 12 Dec 2025 08:00:00 +0000",
         "source": "AI News",
         "summary": "<p>F. Scott Fitzgerald once observed that &#8220;in a real dark night of the soul, it is always three o&#8217;clock in the morning.&#8221; Microsoft&#8217;s latest Copilot&#160;usage analysis&#160;suggests this nocturnal tendency toward existential contemplation persists in the AI age\u2014with religion and philosophy conversations rising through the rankings during early morning hours. The Microsoft AI (MAI) research team [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com"
+    },
+    {
+        "id": "https://www.wired.com/review/evolved-novelties-pleasure-puff-inflatable-rabbit/",
+        "title": "Evolved Novelties Pleasure Puff Inflatable Rabbit Review: A-Spot Stimulation",
+        "link": "https://www.wired.com/review/evolved-novelties-pleasure-puff-inflatable-rabbit/",
+        "published": "Fri, 12 Dec 2025 09:00:00 +0000",
+        "source": "WIRED",
+        "summary": "If A-spot stimulation doesn't mean much to you, the Pleasure Puff likely won't excite."
+    },
+    {
+        "id": "https://journal.james-zhan.com/google-de-indexed-my-entire-bear-blog-and-i-dont-know-why/",
+        "title": "Google de-indexed Bear Blog and I don't know why",
+        "link": "https://journal.james-zhan.com/google-de-indexed-my-entire-bear-blog-and-i-dont-know-why/",
+        "published": "Fri, 12 Dec 2025 01:20:05 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46239752\">Comments</a>"
     }
 ]
