📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -9942,5 +9942,85 @@
         "published": "Fri, 12 Dec 2025 01:20:05 +0000",
         "source": "Hacker News",
         "summary": "<a href=\"https://news.ycombinator.com/item?id=46239752\">Comments</a>"
+    },
+    {
+        "id": "https://www.wired.com/story/how-to-watch-the-geminids-meteor-shower/",
+        "title": "The Best Meteor Shower of the Year Is Coming\u2014Here\u2019s How to Watch",
+        "link": "https://www.wired.com/story/how-to-watch-the-geminids-meteor-shower/",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "WIRED",
+        "summary": "The highlight of the year, the Geminids are the most active and colorful meteor shower, offering the chance to see hundreds of shooting stars every hour when they peak in mid-December."
+    },
+    {
+        "id": "https://www.engadget.com/mobile/tablets/best-e-ink-tablet-130037939.html?src=rss",
+        "title": "The best E Ink tablets for 2025",
+        "link": "https://www.engadget.com/mobile/tablets/best-e-ink-tablet-130037939.html?src=rss",
+        "published": "Fri, 12 Dec 2025 10:00:36 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>E Ink tablets have always been intriguing to me because I\u2019m a longtime lover of pen and paper. I\u2019ve had probably hundreds of notebooks over the years, serving as repositories for my story ideas, to-do lists, meeting notes and everything in between. However, I turned away from physical notebooks at a certain point because it was just easier to store everything digitally so I always had my most important information at my fingertips.<br /><br />E Ink tablets seem to provide the best of both wor"
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-unblock-xnxx-porn-for-free",
+        "title": "How to unblock XNXX for free",
+        "link": "https://mashable.com/article/dec-12-unblock-xnxx-porn-for-free",
+        "published": "Fri, 12 Dec 2025 10:01:08 +0000",
+        "source": "Mashable",
+        "summary": "How to unblock porn for free. Unblock and watch XNXX from anywhere in the world."
+    },
+    {
+        "id": "https://mashable.com/article/uranus-neptune-ice-giants-rocky-planets",
+        "title": "Ice giant planets Uranus and Neptune might not be full of ice after all",
+        "link": "https://mashable.com/article/uranus-neptune-ice-giants-rocky-planets",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Uranus and Neptune might be more rocky than icy, new research shows, requiring scientists to rebrand the \"ice giant\" planets."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-swiftscan-lifetime-subscription",
+        "title": "Scan anything, anywhere with this app \u2014 now $42 for life",
+        "link": "https://mashable.com/article/dec-12-swiftscan-lifetime-subscription",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Make scanning a breeze with this lifetime subscription to SwiftScan VIP for just $41.99 (reg. $199.99) with code SCAN through Dec. 21."
+    },
+    {
+        "id": "https://mashable.com/article/dec-12-skoove-premium-lifetime-subscription",
+        "title": "Make 2026 the year you finally learn piano with this AI-powered app",
+        "link": "https://mashable.com/article/dec-12-skoove-premium-lifetime-subscription",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "Learn something new with this lifetime subscription to Skoove Premium Piano Lessons, now just $109.97 (reg. $299.99)."
+    },
+    {
+        "id": "https://mashable.com/article/paul-mescal-sad-boy-ranked",
+        "title": "Paul Mescal movies ranked by Sad Boyness",
+        "link": "https://mashable.com/article/paul-mescal-sad-boy-ranked",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "Mashable",
+        "summary": "The internet boyfriend Paul Mescal breaks our hearts, and we're not mad."
+    },
+    {
+        "id": "https://readwrite.com/california-attorney-general-prediction-markets/",
+        "title": "California Attorney General potentially gearing up to face prediction markets",
+        "link": "https://readwrite.com/california-attorney-general-prediction-markets/",
+        "published": "Fri, 12 Dec 2025 10:04:21 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"California Attorney General potentially gearing up to face prediction markets. Split image showing a smiling man in a suit with folded arms beside a hand holding a smartphone displaying rising financial market candlestick charts.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/California-Attorney-General-potentially-gearing-up-to-face-prediction-markets-300x200.png\" style=\"width: 100%; height: 66.67%; margin-b"
+    },
+    {
+        "id": "https://readwrite.com/tennis-quentin-folliot-suspended-20-years-match-fixing/",
+        "title": "French tennis player Quentin Folliot handed 20-year ban for match-fixing scheme",
+        "link": "https://readwrite.com/tennis-quentin-folliot-suspended-20-years-match-fixing/",
+        "published": "Fri, 12 Dec 2025 09:41:34 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"French tennis player Quentin Folliot handed 20-year ban for match-fixing scheme. French tennis player Quentin Folliot celebrating with clenched fist and racket, pictured beside the ITIA logo.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/French-tennis-player-Quentin-Folliot-handed-20-year-ban-for-match-fixing-scheme-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<"
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-security-key/",
+        "title": "The best security keys of 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-security-key/",
+        "published": "Fri, 12 Dec 2025 10:00:47 GMT",
+        "source": "Latest news",
+        "summary": "Security keys are the ultimate physical security measure for protecting your online accounts. We tested and ranked the best security keys on the market today."
     }
 ]
