📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10022,5 +10022,69 @@
         "published": "Fri, 12 Dec 2025 10:00:47 GMT",
         "source": "Latest news",
         "summary": "Security keys are the ultimate physical security measure for protecting your online accounts. We tested and ranked the best security keys on the market today."
+    },
+    {
+        "id": "https://gizmodo.com/hollywoods-labor-unions-respond-to-disneys-dystopian-new-ai-deal-2000698767",
+        "title": "Hollywood\u2019s Labor Unions Respond to Disney\u2019s Dystopian New AI Deal",
+        "link": "https://gizmodo.com/hollywoods-labor-unions-respond-to-disneys-dystopian-new-ai-deal-2000698767",
+        "published": "Fri, 12 Dec 2025 11:00:49 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Star Wars Phantom Menace Battle Droid Army Naboo\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/star-wars-phantom-menace-battle-droid-army-naboo.jpg\" width=\"1920\" /><br /><br />The WGA and SAG-AFTRA have released statements following Disney's alliance with OpenAI."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-12-2025",
+        "title": "NYT Mini crossword answers, hints for December 12, 2025",
+        "link": "https://mashable.com/article/nyt-mini-crossword-answers-hints-december-12-2025",
+        "published": "Fri, 12 Dec 2025 11:00:14 +0000",
+        "source": "Mashable",
+        "summary": "Answers to each clue for the December 12, 2025 edition of NYT's The Mini crossword puzzle."
+    },
+    {
+        "id": "https://mashable.com/video/conan-o-brien-jason-bateman-will-arnett",
+        "title": "This hilarious clip of Conan OBrien blaming Jason Bateman for his parents deaths is going viral",
+        "link": "https://mashable.com/video/conan-o-brien-jason-bateman-will-arnett",
+        "published": "Fri, 12 Dec 2025 10:55:03 +0000",
+        "source": "Mashable",
+        "summary": "Conan O'Brien and Will Arnett speaking about the text chain they had with Jason Bateman following the death of O'Brien's parents has gone viral."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-cheap-web-hosting/",
+        "title": "The best cheap web hosting services of 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-cheap-web-hosting/",
+        "published": "Fri, 12 Dec 2025 11:01:56 GMT",
+        "source": "Latest news",
+        "summary": "Check out our top picks, tested and ranked, for affordable web hosting services in 2025."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-streaming-vpn/",
+        "title": "Best VPNs for streaming 2025: Expert tested and reviewed",
+        "link": "https://www.zdnet.com/article/best-streaming-vpn/",
+        "published": "Fri, 12 Dec 2025 11:01:38 GMT",
+        "source": "Latest news",
+        "summary": "If you want to access your favorite streaming services from different locations, a VPN might help. Check out my favorites for the fastest speeds and most servers."
+    },
+    {
+        "id": "https://andreasjhkarlsson.github.io//jekyll/update/2023/12/27/4-billion-if-statements.html",
+        "title": "4B If Statements",
+        "link": "https://andreasjhkarlsson.github.io//jekyll/update/2023/12/27/4-billion-if-statements.html",
+        "published": "Sat, 06 Dec 2025 15:34:26 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46174114\">Comments</a>"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/12/1129235/dispatch-thai-space-expo-southeast-asia-exploration/",
+        "title": "Southeast Asia seeks its place in space",
+        "link": "https://www.technologyreview.com/2025/12/12/1129235/dispatch-thai-space-expo-southeast-asia-exploration/",
+        "published": "Fri, 12 Dec 2025 11:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "It\u2019s a scorching October day in Bangkok and I\u2019m wandering through the exhibits at the Thai Space Expo, held in one of the city\u2019s busiest shopping malls, when I do a double take. Amid the flashy space suits and model rockets on display, there\u2019s a plain-looking package of Thai basil chicken. I\u2019m told the same&#8230;"
+    },
+    {
+        "id": "https://www.technologyreview.com/2025/12/12/1129344/expanded-carrier-screening-is-it-worth-it/",
+        "title": "Expanded carrier screening: Is it worth it?",
+        "link": "https://www.technologyreview.com/2025/12/12/1129344/expanded-carrier-screening-is-it-worth-it/",
+        "published": "Fri, 12 Dec 2025 10:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "This week I\u2019ve been thinking about babies. Healthy ones. Perfect ones. As you may have read last week, my colleague Antonio Regalado came face to face with a marketing campaign in the New York subway asking people to\u00a0\u201chave your best baby.\u201d The company behind that campaign, Nucleus Genomics, says it offers customers a way to&#8230;"
     }
 ]
