📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10086,5 +10086,141 @@
         "published": "Fri, 12 Dec 2025 10:00:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This week I\u2019ve been thinking about babies. Healthy ones. Perfect ones. As you may have read last week, my colleague Antonio Regalado came face to face with a marketing campaign in the New York subway asking people to\u00a0\u201chave your best baby.\u201d The company behind that campaign, Nucleus Genomics, says it offers customers a way to&#8230;"
+    },
+    {
+        "id": "https://www.theverge.com/tech/843386/review-cable-paperweight-native-union-weighter",
+        "title": "My defense of a $40 cable paperweight \u2013 I\u2019m sorry",
+        "link": "https://www.theverge.com/tech/843386/review-cable-paperweight-native-union-weighter",
+        "published": "2025-12-12T06:55:31-05:00",
+        "source": "The Verge",
+        "summary": "Warning: I'm going to make an attempt to justify a $40 paperweight for cable management. I'm not sure how I ended up in this position, or who hurt me. All I can say is that I'm not proud of myself, so please, take pity. I've been using Native Union's 3-cable Weighter for about a week. [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/does-red-light-therapy-work/",
+        "title": "Does Red-Light Therapy Work? (2025)",
+        "link": "https://www.wired.com/story/does-red-light-therapy-work/",
+        "published": "Fri, 12 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Even if the glowing mask scares your family, red-light therapy can rejuvenate skin and aid in muscle repair."
+    },
+    {
+        "id": "https://www.wired.com/story/people-are-already-taking-this-unapproved-new-weight-loss-drug-triple-g-retatrutide/",
+        "title": "People Are Already Taking This Unapproved New Weight-Loss Drug",
+        "link": "https://www.wired.com/story/people-are-already-taking-this-unapproved-new-weight-loss-drug-triple-g-retatrutide/",
+        "published": "Fri, 12 Dec 2025 11:30:00 +0000",
+        "source": "WIRED",
+        "summary": "Retatrutide, originally developed by Eli Lilly, has found a loyal fan base\u2014even though clinical trials of the drug still haven\u2019t finished."
+    },
+    {
+        "id": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121506303.html?src=rss",
+        "title": "The Morning After: Tech\u2019s biggest losers of 2025",
+        "link": "https://www.engadget.com/general/the-morning-after-engadget-newsletter-121506303.html?src=rss",
+        "published": "Fri, 12 Dec 2025 12:15:06 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Honestly, compiling the biggest losers for Engadget is more fun than talking up the <a href=\"https://www.engadget.com/techs-biggest-winners-of-2025-180000177.html\">winners</a>. While we reviewed nothing as atrocious as those ill-fated AI assistant gadgets from 2024, AI companies and services straddled both the winner and loser podiums.</p>\n<p>The losers might be you, the American consumer. (Sorry.) In the US, anyone wanting a drone will have to find something that isn\u2019t made by DJI. The compa"
+    },
+    {
+        "id": "https://gizmodo.com/the-duffers-reveal-the-next-stranger-things-episode-titles-and-directors-2000698801",
+        "title": "The Duffers Reveal the Next \u2018Stranger Things\u2019 Episode Titles and Directors",
+        "link": "https://gizmodo.com/the-duffers-reveal-the-next-stranger-things-episode-titles-and-directors-2000698801",
+        "published": "Fri, 12 Dec 2025 12:00:17 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Stranger Things Vol 2 Netflix\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Stranger-Things-vol-2-netflix.jpg\" width=\"1920\" /><br /><br />The hit Netflix series returns on December 25 with three more episodes, leading into the big series finale on December 31."
+    },
+    {
+        "id": "https://gizmodo.com/our-favorite-hobby-friendly-gifts-for-science-geeks-and-gamers-2000691662",
+        "title": "Our Favorite Hobby-Friendly Gifts for Science Geeks and Gamers",
+        "link": "https://gizmodo.com/our-favorite-hobby-friendly-gifts-for-science-geeks-and-gamers-2000691662",
+        "published": "Fri, 12 Dec 2025 12:00:06 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Gizmodo Our Favorite Science Books To Gift This Year (1)\" class=\"attachment-full size-full wp-post-image\" height=\"1280\" src=\"https://gizmodo.com/app/uploads/2025/12/Gizmodo_Our-Favorite-Science-Books-to-Gift-This-Year-1.jpg\" width=\"1920\" /><br /><br />These science-themed gifts mix brains and fun."
+    },
+    {
+        "id": "https://mashable.com/video/jimmy-kimmel-trump-golf-card",
+        "title": "Jimmy Kimmel gleefully mocks Trump over his Gold Cards",
+        "link": "https://mashable.com/video/jimmy-kimmel-trump-golf-card",
+        "published": "Fri, 12 Dec 2025 12:00:21 +0000",
+        "source": "Mashable",
+        "summary": "Jimmy Kimmel has mocked Donald Trump's newly launched Gold Cards, a method for rich people to get a fast-track American visa by paying $1 million."
+    },
+    {
+        "id": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-12-2025",
+        "title": "NYT Connections Sports Edition today: Hints and answers for December 12, 2025",
+        "link": "https://mashable.com/article/nyt-connections-sports-edition-hint-answer-today-december-12-2025",
+        "published": "Fri, 12 Dec 2025 11:13:20 +0000",
+        "source": "Mashable",
+        "summary": "Connections: Sports Edition is a New York Times word game about finding common sports threads between words. How to solve the day's puzzle."
+    },
+    {
+        "id": "https://readwrite.com/joe-maloney-new-president-sports-betting-alliance/",
+        "title": "The Sports Betting Alliance announces Joe Maloney as the new President",
+        "link": "https://readwrite.com/joe-maloney-new-president-sports-betting-alliance/",
+        "published": "Fri, 12 Dec 2025 12:14:49 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"The Sports Betting Alliance announces Joe Maloney as the new President. Promotional graphic from the Sports Betting Alliance announcing \u2018SBA is proud to welcome Joe Maloney.\u2019\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/The-Sports-Betting-Alliance-announces-Joe-Maloney-as-the-new-President-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Joe Maloney has been ann"
+    },
+    {
+        "id": "https://readwrite.com/titus-urges-committee-advance-fair-bet-act-gambling-deductions/",
+        "title": "Titus urges committee to advance FAIR BET Act restoring gambling deductions",
+        "link": "https://readwrite.com/titus-urges-committee-advance-fair-bet-act-gambling-deductions/",
+        "published": "Fri, 12 Dec 2025 11:06:29 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"An image of Rep Dina Titus greeting constituents as part of a campaign video. Titus urges committee to advance FAIR BET Act restoring gambling deductions\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/Titus-urges-committee-to-advance-FAIR-BET-Act-restoring-gambling-deductions-300x200.jpg\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>Rep. Dina Titus (D-Nevada) has urged the"
+    },
+    {
+        "id": "https://www.zdnet.com/article/which-tv-hdmi-port-to-use/",
+        "title": "Does picking the right HDMI port on your TV matter? Short answer: More than you think",
+        "link": "https://www.zdnet.com/article/which-tv-hdmi-port-to-use/",
+        "published": "Fri, 12 Dec 2025 12:11:00 GMT",
+        "source": "Latest news",
+        "summary": "You may be missing out on optimal performance or sound. Here's how to check which one to plug into."
+    },
+    {
+        "id": "https://www.zdnet.com/article/zdnet-breakthrough-awards-2025/",
+        "title": "The 4 most innovative tech products we tested this year (includes a surprise tri-fold phone)",
+        "link": "https://www.zdnet.com/article/zdnet-breakthrough-awards-2025/",
+        "published": "Fri, 12 Dec 2025 12:01:08 GMT",
+        "source": "Latest news",
+        "summary": "From AI glasses with digital overlays to robot vacuums that can pick up your leftover laundry, here are ZDNET's Breakthrough Award winners for 2025."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-travel-vpn/",
+        "title": "Best travel VPNs 2025: Expert-tested for streaming and avoiding censorship",
+        "link": "https://www.zdnet.com/article/best-travel-vpn/",
+        "published": "Fri, 12 Dec 2025 12:00:48 GMT",
+        "source": "Latest news",
+        "summary": "VPNs shield you from spying and can resolve online blocks you may find in other countries including the UK's new checks. My favorite travel VPNs offer fast speeds, massive server networks, and solid encryption."
+    },
+    {
+        "id": "https://www.zdnet.com/article/best-small-business-web-hosting-services/",
+        "title": "The best small business web hosting services of 2025: Expert tested",
+        "link": "https://www.zdnet.com/article/best-small-business-web-hosting-services/",
+        "published": "Fri, 12 Dec 2025 11:30:50 GMT",
+        "source": "Latest news",
+        "summary": "Looking for a reliable and affordable web hosting package for your growing business? Here are my top picks based on affordability, scalability, and value for money."
+    },
+    {
+        "id": "https://infrastruktur.oebb.at/en/projects-for-austria/railway-lines/southern-line-vienna-villach/koralm-railway",
+        "title": "After 27 years within budget Austria open 6thlongest railway tunnel in the world",
+        "link": "https://infrastruktur.oebb.at/en/projects-for-austria/railway-lines/southern-line-vienna-villach/koralm-railway",
+        "published": "Fri, 12 Dec 2025 10:50:22 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46242871\">Comments</a>"
+    },
+    {
+        "id": "https://www.paradedb.com/blog/when-tokenization-becomes-token",
+        "title": "From text to token: How tokenization pipelines work",
+        "link": "https://www.paradedb.com/blog/when-tokenization-becomes-token",
+        "published": "Thu, 11 Dec 2025 14:45:49 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46232003\">Comments</a>"
+    },
+    {
+        "id": "https://www.artificialintelligence-news.com/news/bbva-embeds-ai-into-banking-workflows-using-chatgpt-enterprise/",
+        "title": "BBVA embeds AI into banking workflows using ChatGPT Enterprise",
+        "link": "https://www.artificialintelligence-news.com/news/bbva-embeds-ai-into-banking-workflows-using-chatgpt-enterprise/",
+        "published": "Fri, 12 Dec 2025 12:19:13 +0000",
+        "source": "AI News",
+        "summary": "<p>BBVA is embedding AI into core banking workflows using ChatGPT Enterprise to overhaul risk and service in the sector. For the banking industry, the challenge of generative AI is rarely about adoption; it is about value extraction. BBVA has addressed this by integrating OpenAI\u2019s platform directly into its operational backbone, a decision that will see [&#8230;]</p>\n<p>The post <a href=\"https://www.artificialintelligence-news.com/news/bbva-embeds-ai-into-banking-workflows-using-chatgpt-enterpri"
     }
 ]
