📚 Added new articles to JSON Data

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -10342,5 +10342,93 @@
         "published": "Fri, 12 Dec 2025 13:10:00 +0000",
         "source": "MIT Technology Review",
         "summary": "This is today&#8217;s edition of\u00a0The Download,\u00a0our weekday newsletter that provides a daily dose of what&#8217;s going on in the world of technology. Expanded carrier screening: Is it worth it? Carrier screening\u00a0 tests would-be parents for hidden genetic mutations that might affect their children. It initially involved testing for specific genes in at-risk populations. Expanded carrier&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2025/12/12/reddit-argues-it-isnt-like-other-social-platforms-in-case-against-australias-social-media-ban/",
+        "title": "Reddit argues it isn\u2019t like other social platforms in case against Australia\u2019s social media ban",
+        "link": "https://techcrunch.com/2025/12/12/reddit-argues-it-isnt-like-other-social-platforms-in-case-against-australias-social-media-ban/",
+        "published": "Fri, 12 Dec 2025 13:51:29 +0000",
+        "source": "TechCrunch",
+        "summary": "Reddit, one of the world's largest social platforms, is arguing that it doesn't meet the definition of \"social media platforms\" as it seeks to overturn Australia's law banning children under 16 years of age from social media."
+    },
+    {
+        "id": "https://www.theverge.com/tech/842937/trump-mobile-4g5g-4k-explainer",
+        "title": "A presidential refresher on wireless terminology, courtesy of Trump Mobile",
+        "link": "https://www.theverge.com/tech/842937/trump-mobile-4g5g-4k-explainer",
+        "published": "2025-12-12T09:00:00-05:00",
+        "source": "The Verge",
+        "summary": "Where's the Trump Phone? We're going to keep talking about it every week. We've reached out, as usual, to ask about the Trump Phone's whereabouts. As usual, we're still waiting for a response. In the meantime, we're publishing a little reminder of some wireless tech terms. You know, in case you forgot. 6G? 4K? 3D? [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/gadgets/842702/tetris-my-play-watch-smartwatch-hands-on",
+        "title": "This Tetris-playing watch struggles with the one thing it should be great at",
+        "link": "https://www.theverge.com/gadgets/842702/tetris-my-play-watch-smartwatch-hands-on",
+        "published": "2025-12-12T08:41:38-05:00",
+        "source": "The Verge",
+        "summary": "The Tetris: My Play Watch may look like an Apple Watch, but it eschews most of the functionality you'll typically find on a smartwatch to focus on two things: playing Tetris and celebrating the game through a UI that's thoroughly Tetris-themed. It's very good at making you want to play Alexey Pajitnov's iconic tetromino-stacking puzzler, [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/should-you-get-permanent-outdoor-lights/",
+        "title": "The Best Permanent Outdoor Lights (2025): Govee, Eufy, Lepro",
+        "link": "https://www.wired.com/story/should-you-get-permanent-outdoor-lights/",
+        "published": "Fri, 12 Dec 2025 14:06:00 +0000",
+        "source": "WIRED",
+        "summary": "DIY permanent eave lights that attach to the exterior of your home are becoming more popular. But are they worth the effort (and cost)?"
+    },
+    {
+        "id": "https://www.wired.com/gallery/best-merino-wool-t-shirts/",
+        "title": "Best Merino Wool T-Shirts (2025), Tried On and Tested",
+        "link": "https://www.wired.com/gallery/best-merino-wool-t-shirts/",
+        "published": "Fri, 12 Dec 2025 13:30:00 +0000",
+        "source": "WIRED",
+        "summary": "These merino wool T-shirts are the last shirt you\u2019ll ever wear. I\u2019m wearing one right now."
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/streaming/f1-the-movie-now-streaming-on-apple-tv-following-a-long-theatrical-run-133531702.html?src=rss",
+        "title": "F1: The Movie now streaming on Apple TV following a long theatrical run",
+        "link": "https://www.engadget.com/entertainment/streaming/f1-the-movie-now-streaming-on-apple-tv-following-a-long-theatrical-run-133531702.html?src=rss",
+        "published": "Fri, 12 Dec 2025 13:35:31 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><em>F1: The Movie</em>, the cinematic love letter to Formula One and \u2014 quite possibly even more so \u2014 consumer products made by Apple, is finally available to <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=4130e2f0-a14f-4c5e-bdab-cd52ac7d8e79&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;contentUuid=74c4fa61-4d47-42ed-8336-812170cbc400&amp;featureId=text-link&amp;merchantName=Apple&amp;linkText=stream&amp;custData=eyJzb3VyY2VOYW1lIjoiV2ViLURlc2t0b3AtVmVyaXpv"
+    },
+    {
+        "id": "https://www.engadget.com/science/in-2025-ai-and-evs-gave-the-us-an-insatiable-hunger-for-power-133000673.html?src=rss",
+        "title": "In 2025, AI and EVs gave the US an insatiable hunger for power",
+        "link": "https://www.engadget.com/science/in-2025-ai-and-evs-gave-the-us-an-insatiable-hunger-for-power-133000673.html?src=rss",
+        "published": "Fri, 12 Dec 2025 13:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>You may be surprised to learn electricity only accounts for <a class=\"link\" href=\"https://www.iea.org/news/as-risks-multiply-in-a-world-thirsty-for-energy-diversification-and-cooperation-are-more-urgent-than-ever\" target=\"_blank\">21 percent</a> of the world\u2019s energy <a class=\"link\" href=\"https://ec.europa.eu/eurostat/statistics-explained/index.php?title=Glossary:Final_energy_consumption\" target=\"_blank\">consumption</a>. Fossil fuels and the rest all play their part to make the world go around"
+    },
+    {
+        "id": "https://gizmodo.com/you-have-a-week-to-claim-up-to-7500-from-att-data-breach-settlements-2000698631",
+        "title": "You Have a Week to Claim Up to $7,500 From AT&T Data Breach Settlements",
+        "link": "https://gizmodo.com/you-have-a-week-to-claim-up-to-7500-from-att-data-breach-settlements-2000698631",
+        "published": "Fri, 12 Dec 2025 14:00:45 +0000",
+        "source": "Gizmodo",
+        "summary": "<img alt=\"Sign of AT&amp;T\" class=\"attachment-full size-full wp-post-image\" height=\"1217\" src=\"https://gizmodo.com/app/uploads/2025/12/shutterstock_1019880574.jpg\" width=\"1920\" /><br /><br />Two breaches impacted millions of former and current AT&amp;T users, unveiling SSNs, texts, and more."
+    },
+    {
+        "id": "https://mashable.com/video/dust-bunny-hannibal-mads-mikkelsen-bryan-fuller",
+        "title": "Mads Mikkelsen and Bryan Fuller reveal the road from Hannibal to Dust Bunny",
+        "link": "https://mashable.com/video/dust-bunny-hannibal-mads-mikkelsen-bryan-fuller",
+        "published": "Fri, 12 Dec 2025 13:51:04 +0000",
+        "source": "Mashable",
+        "summary": "Cannibal horror to a kid-friendly monster movie \u2014\u00a0with Mads Mikkelsen as a hitman! \"Dust Bunny\" is now in theaters. Plus, a \"Pushing Daisies\" Season 3 update!"
+    },
+    {
+        "id": "https://readwrite.com/california-lanette-bashore-sentenced-prison-fraud-gambling/",
+        "title": "California woman Lanette Bashore jailed 30 months for decades-long fraud funding gambling habit",
+        "link": "https://readwrite.com/california-lanette-bashore-sentenced-prison-fraud-gambling/",
+        "published": "Fri, 12 Dec 2025 13:29:52 +0000",
+        "source": "ReadWrite",
+        "summary": "<div><img alt=\"California woman Lanette Bashore jailed 30 months for decades-long fraud funding gambling habit. Judge\u2019s gavel raised over bench in courtroom during sentencing hearing.\" class=\"attachment-medium size-medium wp-post-image\" height=\"200\" src=\"https://readwrite.com/wp-content/uploads/2025/12/California-woman-Lanette-Bashore-jailed-30-months-for-decades-long-fraud-funding-gambling-habit-300x200.png\" style=\"width: 100%; height: 66.67%; margin-bottom: 15px;\" width=\"300\" /></div>\n<p>A Cal"
+    },
+    {
+        "id": "https://fedorarepository.org/",
+        "title": "Fedora: Open-source repository for long-term digital preservation",
+        "link": "https://fedorarepository.org/",
+        "published": "Fri, 12 Dec 2025 13:23:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46243883\">Comments</a>"
     }
 ]
